Correction improvements on mobile player bar component alignments

--- a/src/app/themes/volumio3/components/player-buttons/volumio3-player-buttons.scss
+++ b/src/app/themes/volumio3/components/player-buttons/volumio3-player-buttons.scss
@@ -40,8 +40,12 @@
     &.play i{
       padding-left: 4px;
     }
-    @include breakpoint(xs) {
-      // background: $theme-dark-transparent-background;
+
+    left: 15px;
+
+    @include breakpoint(md) {
+      left: 0;
+      right: 0;
     }
   }
 
