--- a/src/app/themes/volumio3/components/volume-manager/volumio3-volume-manager.scss
+++ b/src/app/themes/volumio3/components/volume-manager/volumio3-volume-manager.scss
@@ -35,7 +35,6 @@ volume-manager{
   /* vertical slider mobile volumio 3 theme */
   .volumeManager.on-footer{
     margin-top: 0;
-    right: 16px;
 
     #openVolumeVerticalSlider{
 
